# jar

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GENESIS.md  Jar.lean  JarBook.lean  JarBookMain.lean  README.md  lake-manifest.json  lakefile.toml  zensical.toml
.agents/skills/jar-issue-task/: SKILL.md
.agents/skills/jar-review/: SKILL.md
.claude/skills/ai-slop/: SKILL.md
.claude/skills/jar-issue-maintain/: SKILL.md
.claude/skills/jar-issue-task/: SKILL.md
.claude/skills/jar-review/: SKILL.md
.github/cache/: genesis.json
.github/workflows/: ci-grey.yml  ci-spec.yml  docs.yml  genesis-cache-update.yml  genesis-merge.yml  genesis-pr-opened.yml  genesis-review.yml
Genesis/: Json.lean  Scoring.lean  State.lean  Types.lean
Genesis/Cli/: SelectTargets.lean
Jar/: Accumulation.lean  Commitment.lean  Consensus.lean  Erasure.lean  Merkle.lean  Notation.lean  PVM.lean  Services.lean  State.lean  StateSerialization.lean  Variant.lean
Jar/Commitment/: Circuit.lean  DA.lean  Encode.lean  Field.lean  Merkle.lean  Proof.lean  Prover.lean  ReedSolomon.lean  Sumcheck.lean  Transcript.lean  Utils.lean  Verifier.lean  WIProof.lean  WitnessEncoding.lean
Jar/PVM/: Decode.lean  Interpreter.lean  Memory.lean
Jar/Test/: Accumulate.lean  AccumulateJson.lean  Arbitrary.lean  Assurances.lean  AssurancesJson.lean  Authorizations.lean  AuthorizationsJson.lean  BlockTest.lean  Disputes.lean  DisputesJson.lean  DisputesVectors.lean  History.lean  HistoryJson.lean  Preimages.lean  PreimagesJson.lean  Properties.lean  Reports.lean  ReportsJson.lean  Safrole.lean  SafroleJson.lean  Statistics.lean  StatisticsJson.lean  StfServer.lean
Jar/Types/: Config.lean
JarBook/: Constants.lean  Notation.lean  PVM.lean  State.lean
crates/grey/: Cargo.toml
crates/grey-bench/: Cargo.toml
crates/grey-bench/benches/: pvm_bench.rs
crates/grey-bench/examples/: dump_native.rs
crates/grey-bench/src/: lib.rs
crates/grey-codec/src/: header_codec.rs
crates/grey-consensus/src/: authoring.rs  genesis.rs
crates/grey-crypto/: Cargo.toml
crates/grey-crypto/src/: bls.rs  lib.rs
crates/grey-merkle/src/: state_serial.rs
crates/grey-network/src/: service.rs
crates/grey-pvm/src/: vm.rs
crates/grey-state/src/: accumulate.rs  pvm_backend.rs  refine.rs  transition.rs
crates/grey-state/tests/: stf_assurances.rs  stf_authorizations.rs  stf_blocks.rs  stf_disputes.rs  stf_history.rs  stf_preimages.rs  stf_reports.rs  stf_safrole.rs  stf_statistics.rs
crates/grey-transpiler/src/: assembler.rs  elf.rs  lib.rs  linker.rs  riscv.rs
crates/grey/src/: audit.rs  chainspec.rs  finality.rs  guarantor.rs  main.rs  node.rs  testnet.rs  tickets.rs
crates/javm/: Cargo.toml
crates/javm/src/: gas_cost.rs  instruction.rs  lib.rs  program.rs  vm.rs
crypto-ffi/: bridge.c  sizes.h
crypto-ffi/src/: lib.rs
docs/: CNAME  benchmark.md  coinless.md  conformance-testing.md  index.md  pvm-recompiler-optimization.md
grey/: AGENTS.md  docker-compose.yml
grey/crates/grey/: Cargo.toml
grey/crates/grey-bench/: Cargo.toml  build.rs
grey/crates/grey-bench/benches/: mem_bench.rs  pagefault_bench.rs  pvm_bench.rs
grey/crates/grey-bench/examples/: compile_vs_exec.rs  dump_native.rs  ecrecover_single.rs
grey/crates/grey-bench/src/: lib.rs
grey/crates/grey-erasure/: Cargo.toml
grey/crates/grey-rpc/: Cargo.toml
grey/crates/grey-rpc/src/: lib.rs
grey/crates/grey-state/: Cargo.toml
grey/crates/grey-store/: Cargo.toml
grey/crates/grey-store/src/: lib.rs
grey/crates/grey-types/: Cargo.toml
grey/crates/grey/src/: audit.rs  chainspec.rs  finality.rs  guarantor.rs  keystore.rs  main.rs  node.rs  seq_testnet.rs  testnet.rs  tickets.rs
grey/crates/javm/: Cargo.toml
grey/crates/javm-builtins/: Cargo.toml
grey/crates/javm-builtins/src/: lib.rs
grey/crates/javm/src/: args.rs  backend.rs  backing.rs  cap.rs  gas_cost.rs  gas_sim.rs  instruction.rs  kernel.rs  lib.rs  program.rs  program_v2.rs  vm.rs
grey/crates/javm/src/interpreter/: mod.rs
grey/crates/javm/src/recompiler/: asm.rs  codegen.rs  mod.rs  predecode.rs  signal.rs
grey/harness/: Cargo.toml
grey/harness/src/: main.rs  pixel.rs  poll.rs  rpc.rs  testnet.rs
grey/harness/src/scenarios/: consistency.rs  invalid_wp.rs  liveness.rs  mod.rs  recovery.rs  repeat.rs  serial.rs
grey/services/bench-blake2b/: Cargo.toml
grey/services/bench-blake2b/src/: lib.rs  main.rs  polkavm.rs
grey/services/bench-ecrecover/: Cargo.toml
grey/services/bench-ecrecover/src/: lib.rs  main.rs  polkavm.rs
grey/services/bench-ed25519/: Cargo.toml
grey/services/bench-ed25519/src/: lib.rs  main.rs  polkavm.rs
grey/services/bench-keccak/: Cargo.toml
grey/services/bench-keccak/src/: lib.rs  main.rs  polkavm.rs
grey/services/bench-prime-sieve/: Cargo.toml
grey/services/bench-prime-sieve/src/: lib.rs  main.rs  polkavm.rs
grey/services/counter-service/: Cargo.toml
grey/services/javm-guest-tests/: build.rs
grey/services/pixels-authorizer/: Cargo.toml
grey/services/pixels-service/: Cargo.toml
grey/services/sample-service/: Cargo.toml
services/bench-ecrecover/: Cargo.toml  riscv32em.json  riscv64em-polkavm.json
services/bench-ecrecover/src/: main.rs
spec/: CLAUDE.md  Jar.lean  JarBook.lean  Makefile
spec/Genesis/: Scoring.lean  State.lean  Types.lean
spec/Genesis/Cli/: Evaluate.lean  Ranking.lean  SelectTargets.lean
spec/Genesis/Test/: Genesis.lean  GenesisJson.lean
spec/Jar/: Accumulation.lean  Json.lean  PVM.lean  Services.lean  State.lean  StateSerialization.lean
spec/Jar/PVM/: Capability.lean  Decode.lean  Instructions.lean  Interpreter.lean  Kernel.lean
spec/Jar/Proofs/: BalanceEcon.lean  Codec.lean  (+6 more)
spec/JarBook/: Accumulation.lean  Capability.lean  Codec.lean  Consensus.lean  Economics.lean  Erasure.lean  JAVM.lean  Kernel.lean  Merkle.lean  Notation.lean  PVM.lean  Pipeline.lean  Services.lean  State.lean  Variant.lean
spec/tools/: genesis-check-cache.sh  genesis-collect-reviews.sh
tools/: gen_disputes_tests.py  genesis-collect-reviews.sh  genesis-replay.sh
tools/jar-genesis/: CLAUDE.md
(+1807 files in other folders)
