[package]
name = "grey-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PVM benchmarks: grey interpreter vs recompiler vs polkavm"

[features]
default = ["polkavm-generic-sandbox"]
polkavm-generic-sandbox = ["polkavm/generic-sandbox"]

[dependencies]
javm = { workspace = true }
grey-transpiler = { workspace = true }
polkavm = "0.30.0"
polkavm-common = "0.30.0"
polkavm-linker = { path = "../../../polkavm/crates/polkavm-linker" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pvm_bench"
harness = false
