[package]
name = "harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
grey-types = { workspace = true }
grey-codec = { workspace = true }
scale = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = { workspace = true }
