[package]
name = "grey-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON-RPC server for Grey node — work package submission and state queries."

[dependencies]
grey-types = { workspace = true }
grey-codec = { workspace = true }
grey-crypto = { workspace = true }
grey-store = { workspace = true }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
jsonrpsee = { version = "0.24", features = ["client"] }
tempfile = "3"
grey-consensus = { workspace = true }
