[package]
name = "grey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JAM (Join-Accumulate Machine) blockchain node implementation."

[[bin]]
name = "grey"
path = "src/main.rs"

[dependencies]
grey-types = { workspace = true }
scale = { workspace = true }
grey-crypto = { workspace = true }
javm = { workspace = true }
grey-merkle = { workspace = true }
grey-erasure = { workspace = true }
grey-state = { workspace = true }
grey-consensus = { workspace = true }
grey-services = { workspace = true }
grey-network = { workspace = true }
grey-store = { workspace = true }
grey-rpc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
bip39 = { workspace = true }
thiserror = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"

[build-dependencies]
build-javm = { path = "../build-javm" }
