[package]
name = "javm-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared freestanding builtins for JAVM/PolkaVM service crates"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_env, values("javm", "polkavm"))', 'cfg(target_os, values("none"))'] }
