[package]
name = "javm"
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Join-Accumulate VM (JAVM)."

[features]
default = ["std"]
std = ["libc", "memoffset"]

[dependencies]
libc = { version = "0.2", optional = true }
memoffset = { version = "0.9", optional = true }
scale = { workspace = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
