[package]
name = "bench-blake2b"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
blake2 = { version = "0.10", default-features = false }
javm-builtins = { path = "../../crates/javm-builtins" }

[target.'cfg(target_env = "polkavm")'.dependencies]
polkavm-derive = "0.32.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_env, values("javm", "polkavm"))', 'cfg(target_os, values("none"))'] }
