[package]
name = "bench-ed25519"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ed25519-compact = { version = "2", default-features = false }
javm-builtins = { path = "../../crates/javm-builtins" }

[target.'cfg(target_env = "polkavm")'.dependencies]
polkavm-derive = "0.32.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_env, values("javm", "polkavm"))', 'cfg(target_os, values("none"))'] }
